--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>my 2nd github ripo</title>
 </head>
 <body>
-    
+    <h1>i can github</h1>
+    <h2>mama khaico</h2>
+    <h3>new code changes</h3>
 </body>
 </html>
