--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my 2nd github ripo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>i can github</h1>
     <h2>mama khaico</h2>
     <h3>new code changes</h3>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab consectetur sapiente cum quae, rem corporis voluptate illum totam distinctio minima exercitationem laudantium id vel commodi quia sequi praesentium reprehenderit Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero quasi iste in ducimus voluptas veritatis quisquam consequatur assumenda odio optio quis, facere enim beatae commodi tenetur dolore placeat doloremque? Dolorum Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi quos dolore id ipsa in deserunt? Amet ex, voluptatum optio voluptatibus veritatis maxime accusantium mollitia sequi veniam recusandae qui aliquam doloribus?</p>
 </body>
 </html>
